// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification renders centered notification 1`] = `
<div
  className="notification-container
        visible center-horizontal center-vertical info "
>
  <div
    className="notification-title"
  >
    <div>
      Test Title
    </div>
    <div
      className="close-icon"
      onClick={[Function]}
    />
  </div>
  <div
    className="notification-content"
  >
    Test text for notification commponent
  </div>
</div>
`;

exports[`Notification renders error bottom right 1`] = `
<div
  className="notification-container
        visible right bottom error "
>
  <div
    className="notification-title"
  >
    <div>
      Test Title
    </div>
    <div
      className="close-icon"
      onClick={[Function]}
    />
  </div>
  <div
    className="notification-content"
  >
    Test text for notification commponent
  </div>
</div>
`;

exports[`Notification renders hidden notification 1`] = `
<div
  className="notification-container
        none right bottom info "
>
  <div
    className="notification-title"
  >
    <div>
      Test Title
    </div>
    <div
      className="close-icon"
      onClick={[Function]}
    />
  </div>
  <div
    className="notification-content"
  >
    Test text for notification commponent
  </div>
</div>
`;

exports[`Notification renders info top left 1`] = `
<div
  className="notification-container
        visible left top info "
>
  <div
    className="notification-title"
  >
    <div>
      Test Title
    </div>
    <div
      className="close-icon"
      onClick={[Function]}
    />
  </div>
  <div
    className="notification-content"
  >
    Test text for notification commponent
  </div>
</div>
`;
